--- a/centralisateur/src/main/webapp/index.html
+++ b/centralisateur/src/main/webapp/index.html
@@ -172,7 +172,7 @@
            <div class="menu-item" onclick="showAccueil()">🏠 Accueil</div>
            <div class="menu-item" onclick="showCompteCourant()">🏦 Compte Courant</div>
            <div class="menu-item" onclick="showCompteDepot()">📊 Compte Dépôt</div>
-           <div class="menu-item">💰 Compte Prêt</div>
+           <div class="menu-item" onclick="showComptePret()">💰 Compte Prêt</div>
            <div class="menu-item">⚙️ Paramètres</div>
            <div class="menu-item">🚪 Déconnexion</div>
        </div>
